tests/errors/intrinsics4.f90
program intrinsics4
    print *, dshiftl(1, 1_8, 1)
end program